2007-02-02  Akim Demaille  <akim@lrde.epita.fr>

	* configure.ac: Let URBI_PROG_CXX do it.

2007-02-02  Akim Demaille  <akim@lrde.epita.fr>

	* src/utypes.hh (TagInfo::TagInfo): New copy ctor..

2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	revert email that fails in mailto property.

2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	change mailto. 

2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	fix BIN problem in grammar.y 
	* src/parser/bison/ugrammar.y: replace "BIN" by TOK_BIN.

2007-01-27  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Catch up with recent stuff in common.
	* src/console.cc: utime is now in the libport namespace.
	* src/parser/bison/utoken.l: Handle conflicting CPP defines.
	* src/uexpression.cc (ECHO, PING): Now provided by libport.

2007-01-26  POTHIER Benoit  <pothier@gostai.com>

	Dummy change to test buildfarm.
	* AUTHORS: Change Copyright date.

2007-01-25  Matthieu Nottale  <nottale@gostai.com>

	Remove unjustified abort, replace abort by assert
	* src/uvariable.cc: Add missing break in the data_void case. Remove abort for data_void case in 2nd switch.

2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #73 (illegal void operations) 
	* src/uexpression.cc: done.

2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	remove spaces. 
	* src/uvariable.hh: done.

2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	Since the major event mechanism rewriting in r265, test lazzy
	evaluation had been broken on purpose, because we wanted the following
	code to ping twice:

        (1):

	at (a || b) ping;
	emit a & emit b;

	So we had to eval the right side of || even if the left side was
	already true (same thing with &&).
	This led to a series of serious problems where programmers commonly
	took for granted that things like that should work:

	if (!isdef(x) || x...) // trigger a runtime error on x when unknown!

	It also impacted the autogenerated code of 'new', which made the