@@ -1,3 +1,8 @@
+2007-02-06  Matthieu Nottale  <nottale@gostai.com>
+
+	Fix a bug when copying a binary with no header. Replace aborts with asserts to differenciate between them should they trigger.
+	* src/uexpression.cc: Here.
+
 2007-02-02  Akim Demaille  <akim@lrde.epita.fr>
 
 	* configure.ac: Let URBI_PROG_CXX do it.
